# template

./: .gitignore  fourmolu.yaml  package.yaml  template.cabal
Data/Text/: Template.hs
bench/: Example.hs  Main.hs  template.xml
examples/: Hello.hs  Main.hs
src/Data/Text/Template/: Builder.hs  Closured.hs  LinearBuilder.hs  Parse.hs  StrictText.hs
