cabal-version: 3.0
name:          template
version:       0.2.0.10
description:
  Simple string substitution library that supports \"$\"-based
  substitution.  Meant to be used when Text.Printf or string
  concatenation would lead to code that is hard to read but when a
  full blown templating system is overkill.

synopsis:      Simple string substitution
category:      Text
license:       BSD-3-Clause
license-file:  LICENSE
author:        Johan Tibell <johan.tibell@gmail.com>
maintainer:    Johan Tibell <johan.tibell@gmail.com>
build-type:    Simple


library
  exposed-modules:
    Data.Text.Template.Builder
    Data.Text.Template.Closured
    Data.Text.Template.LinearBuilder
    Data.Text.Template.Parse
    Data.Text.Template.StrictText

  build-depends:
      base                 >=3.0   && <5
    , containers
    , deepseq
    , mtl                  >=1.1   
    , strict-identity
    , template-haskell
    , text                 >=0.7.2 && <3
    , text-builder-linear
    , th-lift
    , vector


  ghc-options:     -funbox-strict-fields -Wall
  hs-source-dirs:  src

  if impl(ghc >=8)
    ghc-options: -Wtabs
    cpp-options: -DHAVE_SEMIGROUP

  else
    if impl(ghc >=6.8)
      ghc-options: -fwarn-tabs

source-repository head
  type:     git
  location: https://github.com/tibbe/template

common prod-opts
  ghc-options:
    -O2 -feager-blackholing -flate-specialise -flate-dmd-anal
    -fdicts-strict -fasm-shortcutting -funbox-strict-fields
    -fworker-wrapper-cbv

benchmark bench
  -- import: prod-opts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  other-modules:  Example
  ghc-options:    -O2 -threaded -rtsopts
  build-depends:
      base                 >=3.0 && <5
    , raw-strings-qq
    , tasty-bench
    , template
    , text
    , text-builder-linear
    , th-lift
